--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2.4'
 services:
   db:
     image: mysql
-    container_name: mysql
+    container_name: mysql2
     environment:
       MYSQL_ROOT_PASSWORD: root
     ports:
